# satysfi-pagestyle

./: README.md  Satyristes  satysfi-pagestyle-doc.opam  satysfi-pagestyle.opam
doc/: manual-ja.saty  manual.saty
src/: mark.satyh  pagenum.satyh  pagestyle.satyh
