opam-version: "2.0"
name: "satysfi-pagestyle-doc"
version: "1.0.0"
synopsis: "Document of satysfi-pagestyle"
description: """Document for PageStyle package"""
maintainer: "Noriyuki Abe"
authors: "Noriyuki Abe"
license: "BSD-2-Clause-FreeBSD"
homepage: "https://github.com/abenori/satysfi-pagestyle"
dev-repo: "git+https://github.com/abenori/satysfi-pagestyle.git"
bug-reports: "https://github.com/abenori/satysfi-pagestyle/issues"
depends: [
  "satysfi" { >= "0.0.5" & < "0.0.7"}
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }
  "satysfi-dist"

  "satysfi-pagestyle" {= "%{version}%"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "pagestyle-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "pagestyle-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
