opam-version: "2.0"
name: "satysfi-pagestyle"
version: "1.0.0"
synopsis: "A SATySFi package for page style"
description: """A SATySFi package for page style"""
maintainer: "Noriyuki Abe"
authors: "Noriyuki Abe"
license: "BSD-2-Clause-FreeBSD"
homepage: "https://github.com/abenori/satysfi-pagestyle"
dev-repo: "git+https://github.com/abenori/satysfi-pagestyle.git"
bug-reports: "https://github.com/abenori/satysfi-pagestyle/issues"
depends: [
  "satysfi" { >= "0.0.5" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }
  "satysfi-dist"

  # If your library depends on other libraries, please write down here
  "satysfi-base" { >= "1.4.0" & < "2.0.0" }
  "satysfi-fss" { >= "0.2.0" & < "0.3.0" }
  "satysfi-pagenumber" { >= "1.0.0" & < "2.0.0" }
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "pagestyle"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "pagestyle"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
